Setting Shader Color to #B3FF4A causes Value + Alpha Sliders to not match their numerical values, causes weird color wheel sliding behavior #67099

Closed
opened 2019-07-17 03:36:14 +02:00 by Tarun Nalluri · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-16 23:38, hash: 4a5e046c92
Worked: version: 2.79b, hash: f4dc9f9d68

Short description of error
After entering the hexcode B3FF4A into a shader's color field, the vertical Value Slider is at 0.5, and doesn't match it's numerical value of 1.000 in the HSV Value text field. Dragging the vertical Value Slider up causes the Value in the horizontal slider to go beyond 1.000. Dragging the vertical Value slider up also automatically changes the Hue + Saturation values of the color.

Additionally, after entering the same B3FF4A in the hex field, the color's numerical Alpha value is 1.000, but the horizontal Alpha slider is at what is normally 0.5. Dragging the slider to the right causes the Alpha value to go up to 2.000.

Exact steps for others to reproduce the error

  1. Load default startup file
  2. Enter the shading workspace by selecting it from the top of the window
  3. Change the Base Color of the default Principled BSDF shader by pasting this hexcode: B3FF4A
  4. Immediately after pressing enter, the vertical Value Slider and the horizontal Alpha slider will not match their respective numerical values in their number fields.

color value and alpha slider bug.blend

system-info.txt

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-16 23:38, hash: `4a5e046c92` Worked: version: 2.79b, hash: f4dc9f9d68b **Short description of error** After entering the hexcode B3FF4A into a shader's color field, the vertical Value Slider is at 0.5, and doesn't match it's numerical value of 1.000 in the HSV Value text field. Dragging the vertical Value Slider up causes the Value in the horizontal slider to go beyond 1.000. Dragging the vertical Value slider up also automatically changes the Hue + Saturation values of the color. Additionally, after entering the same B3FF4A in the hex field, the color's numerical Alpha value is 1.000, but the horizontal Alpha slider is at what is normally 0.5. Dragging the slider to the right causes the Alpha value to go up to 2.000. **Exact steps for others to reproduce the error** 1) Load default startup file 2) Enter the shading workspace by selecting it from the top of the window 3) Change the Base Color of the default Principled BSDF shader by pasting this hexcode: B3FF4A 4) Immediately after pressing enter, the vertical Value Slider and the horizontal Alpha slider will not match their respective numerical values in their number fields. [color value and alpha slider bug.blend](https://archive.blender.org/developer/F7613979/color_value_and_alpha_slider_bug.blend) [system-info.txt](https://archive.blender.org/developer/F7613978/system-info.txt)
Author

Added subscriber: @cpltarun

Added subscriber: @cpltarun

This issue was referenced by b69c33aeba

This issue was referenced by b69c33aeba679665dc95c90fcced078b576dc527
Brecht Van Lommel self-assigned this 2019-07-17 14:24:25 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#67099
No description provided.