Fix T67099: entering color picker hex value #FF results in 1.000001